src/App.css
html{
  line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

.clearfix:after { clear: both; content: ''; display: block; font-size: 0; height: 0;visibility: hidden; }

html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}

*, *:before, *:after {box-sizing: inherit}

.sr-only { border: 0; clip: rect(0 0 0 0); clip-path: inset(100%); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; white-space: nowrap; width: 1px;}

a {
  color: #fff;
  text-decoration: none;
}

/* ***************** */
/* Typography Styles */
/* ***************** */

@import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
@import url('//db.onlinewebfonts.com/c/e6d1e7cf2a823f86a5866a9a0c1e7f08?family=WebnarW00-DemiBold');

/* ***************** */

.AppScreen1 {
  align-items: center;
  background-image: url(./assets/SK-C-1606.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  font-family: 'Ropa Sans', sans-serif;
  min-height: 100vh;
}

.AppScreen2 {
  align-items: flex-end;
  background-image: url(./assets/SK-A-335.jpg);
  background-position: 0;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  font-family: 'Ropa Sans', sans-serif;
  min-height: 100vh;
}

.artContainer {
  background-color: #ffffffb0;
}

.art, .artContainer{
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 auto;
  min-height: 50vh;
  padding-bottom: 50px;
  width: 70%;
}

.headline {
  font-family: "WebnarW00-DemiBold", Sans-serif;
  text-transform: uppercase;
}

button {
  transition: 0.3s;
}

button:hover {
box-shadow: rgba(100, 100, 111, 0.4) 0px 7px 29px 0px;
transform: scale(1.15);
}

.colorBox {
  border: 2px solid #000;
  color: #fff;
  cursor: pointer;
  height: 100px;
  width: 100px;
}

footer {
  background-color: #284034;
  margin-top: auto;
  padding: 10px;
  text-align: center;
  width: 100%;
}

footer p {
  color: #fff;
  font-size: 1rem;
  margin: 0;
}

img {
  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
  max-width: 700px;
  width: 100%;
}

html {
  font-size: 125%;
}

label {
  color: #56BC72;
  font-size: 2rem;
  font-weight: bold;
}

li {
  list-style: none;
  margin: 10px 15px;
}

select {
  margin: 20px 0;
}

ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0;
}

.userSelect {
  align-items: center;
  background-color: #ffffffb0;
  border-radius: 65px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-top: 20%;
  padding: 70px;
}

.userSelectMade {
  align-items: center;
  background-color: #ffffffb0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: auto auto 0;
  padding: 40px;
  width: 70%;
}

.userSelect button {
  background-color: #56BC72;
  border: none;
  color: #fff;
  padding: 5px;
}

.colorList {
  background-color: #ffffffb0;
  margin: 0 auto;
  padding: 25px;
  width: 70%;
}

